@@ -1,9 +1,0 @@
-Changes
-lib/GRNOC/CLI.pm
-Makefile.PL
-MANIFEST			This list of files
-perl-GRNOC-CLI.spec
-t/pod-coverage.t
-t/pod.t
-META.yml                                 Module YAML meta-data (added by MakeMaker)
-META.json                                Module JSON meta-data (added by MakeMaker)
