@@ -1,0 +1,6 @@
+^\.git/
+^\.github/
+^docker/
+^MANIFEST\..*
+^Makefile\.old$
+^\.gitignore
