@@ -7,8 +7,10 @@ use ExtUtils::MakeMaker;
 use FindBin;
 
 sub MY::postamble { <<"END"; }
+venv:
+	carton install --deployment --path=venv
 
-rpm: dist
+rpm:  manifest dist
 	rpmbuild -ta GRNOC-CLI-\$(VERSION).tar.gz
 
 test_jenkins :
@@ -24,5 +26,5 @@ WriteMakefile(
               PREREQ_PM => {
                            },
               dist                => { COMPRESS => 'gzip -9f', SUFFIX => 'gz', },
-              clean               => { FILES => 'GRNOC-CLI*' },
+              clean               => { FILES => 'GRNOC-CLI* venv' },
              );
