@@ -1,0 +1,3 @@
+requires 'Term::ProgressBar';
+requires 'Term::ReadKey';
+requires 'Carp';
