@@ -1,3 +1,9 @@
+GRNOC::CLI v1.0.3 -- Wedn Apr 25 2024
+=======================================
+Features:
+
+* Packaged for OL8
+
 GRNOC::CLI v1.0.2-2 -- Wedn Jan 14 2015
 =======================================
 
